--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generalization",
+  "name": "general",
   "version": "0.0.1",
   "description": "",
   "author": "Mstislav Zhivodkov",
@@ -7,7 +7,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "NODE_ENV=production webpack",
+    "builddemo": "NODE_ENV=demo webpack"
   },
   "dependencies": {},
   "devDependencies": {
