--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "NODE_ENV=production webpack",
-    "builddemo": "NODE_ENV=demo webpack"
+    "builddemo": "NODE_ENV=demo webpack",
+    "lint": "tslint src/**/*.ts demo/**/*.ts"
   },
   "dependencies": {},
   "devDependencies": {
