--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "general",
   "version": "0.0.1",
-  "description": "",
-  "author": "Mstislav Zhivodkov",
-  "license": "MIT",
+  "description": "Fast marker generalization algorithm",
+  "contributors": [
+    {
+      "name": "Mstislav Zhivodkov",
+      "email": "stevemyz@gmail.com",
+      "url": "https://trufi.github.io/"
+    },
+    {
+      "name": "Alexey Fedosov",
+      "email": "alex@fedosov.me"
+    }
+  ],
+  "license": "BSD-2-Clause",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "npm run dev",
+    "test": "npm run lint",
+    "dev": "webpack-dev-server",
     "build": "NODE_ENV=production webpack",
     "builddemo": "NODE_ENV=demo webpack",
     "lint": "tslint src/**/*.ts demo/**/*.ts"
   },
-  "dependencies": {},
   "devDependencies": {
     "2gis-maps": "^3.2.0",
     "@types/leaflet": "^1.0.56",
