--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   },
   "devDependencies": {
     "2gis-maps": "^3.2.0",
+    "@2gis/markerdrawer": "^0.0.1",
     "@types/leaflet": "^1.0.56",
     "@types/node": "^7.0.12",
     "@types/rbush": "^2.0.2",
-    "markerdrawer": "https://github.com/2gis/markerdrawer.git#8ef4d5dbfe325a03dbbb321f7f5aa2b6cc23aa96",
     "rbush": "^2.0.1",
     "ts-loader": "^2.0.3",
     "tslib": "^1.6.0",
