--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "typescript": "^2.4.2",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1",
-    "webworkify-webpack": "^2.0.5"
+    "webworkify-webpack": "^2.0.5",
+    "whatwg-fetch": "^2.0.3"
   }
 }
