Add gh-pages deploy from CI

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "BSD-2-Clause",
   "repository": {
     "type": "git",
-    "url": "git@github.com:2gis/general.git"
+    "url": "git://github.com/2gis/general.git"
   },
   "main": "dist/general.js",
   "scripts": {
