--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "builddemo": "NODE_ENV=demo webpack",
     "unit": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --compilers ts:ts-node/register test/**/*.spec.ts",
     "unit-dev": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -w --compilers ts:ts-node/register test/**/*.spec.ts",
-    "lint": "tslint 'src/**/*.ts' 'demo/**/*.ts' 'test/**/*.ts'"
+    "lint": "tslint 'src/**/*.ts' 'demo/**/*.ts' 'test/**/*.ts'",
+    "bench": "ts-node -O '{\"module\":\"commonjs\"}' benchmark/index.ts"
   },
   "devDependencies": {
     "2gis-maps": "^3.3.5",
