--- a/package.json
+++ b/package.json
@@ -23,30 +23,31 @@
   "scripts": {
     "start": "npm run dev",
     "test": "npm run lint && npm run unit",
-    "dev": "webpack-dev-server",
-    "build": "webpack --env.production",
-    "builddemo": "webpack --env.demo",
-    "unit": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --compilers ts:ts-node/register test/**/*.spec.ts",
-    "unit-dev": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -w --compilers ts:ts-node/register test/**/*.spec.ts",
+    "dev": "webpack-dev-server --mode=development",
+    "build": "webpack --mode=production",
+    "builddemo": "webpack --mode=production --demo",
+    "unit": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --require ts-node/register test/**/*.spec.ts",
+    "unit-dev": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -w --require ts-node/register test/**/*.spec.ts",
     "lint": "tslint 'src/**/*.ts' 'demo/**/*.ts' 'test/**/*.ts'"
   },
   "devDependencies": {
-    "2gis-maps": "^3.3.5",
-    "@2gis/markerdrawer": "^0.0.9",
+    "2gis-maps": "^3.5.8",
+    "@2gis/markerdrawer": "^1.0.1",
     "@types/leaflet": "^1.0.66",
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^8.0.14",
-    "fork-ts-checker-webpack-plugin": "^0.4.1",
-    "mocha": "^3.4.2",
-    "ts-loader": "^2.3.1",
-    "ts-node": "^3.2.1",
-    "tslib": "^1.7.1",
-    "tslint": "^5.5.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.4.2",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1",
-    "webworkify-webpack": "^2.0.5",
-    "whatwg-fetch": "^2.0.3"
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.6.2",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "mocha": "^6.1.4",
+    "ts-loader": "^6.0.4",
+    "ts-node": "^8.3.0",
+    "tslib": "^1.10.0",
+    "tslint": "^5.18.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2",
+    "webworkify-webpack": "^2.1.5",
+    "whatwg-fetch": "^3.0.0"
   }
 }
